# ray2d

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md
include/: BoundingBox.h  LineEquation.h  Point.h  PointLine.h  Polygon.h  Ray.h  RayHit.h  Util.h
src/: BoundingBox.cpp  LineEquation.cpp  PointLine.cpp  Polygon.cpp  Ray.cpp  main.cpp
